# Predictive-Analytics

./: .gitignore  DAMO510, Module 03, in-Class Activity, Instructions.docx  DAMO510, Module 05, in-Class Activity, One Possible Solution.ipynb  DAMO510, Predictive Analytics.docx  DAMO510, Winter 2026, Take-Home Assignment 1, Data Dictionary.xlsx  DAMO510, Winter 2026, Take-Home Assignment 1, Instruction.docx  DAMO510-Module-03-in-Class-Activity-Starter-Code.ipynb  DataCleaning.ipynb  Manuel Medina Predictive Analytics.docx  Take_Home_Assignment_1_Manuel_Medina.ipynb  main.py  pyproject.toml  student_placement_data.csv  student_placement_data_cleaned.csv
Assignment 2/: Assigment_2_Manuel_Medina.ipynb  Manuel Medina Predictive Analytics 2.docx
Final Project/: DAMO510, Winter 2026, Final Project 2.docx  Final_Project.ipynb  Predictive Analytics Group 6.docx
Final Project/ppt_school_presentation/: Final_Project_Presentation.pptx  build_presentation.js  (+2 more)
Module 10/: DAMO510, Module 10, in-Class Activity, Instructions.docx  DAMO510, Module 10, in-Class Activity, Starter.ipynb
Module 4/: DAMO510, Module 04, in-Class Activity, Instructions.docx  DAMO510, Module 04, in-Class Activity, Starter.ipynb
Module 5/: DAMO510, Module 05, in-Class Activity, Instructions.docx  Module_5.ipynb
module 6/: DAMO510, Module 06, Starter.ipynb  My_Module_6.ipynb  PCOS_data_without_infertility_tailored.xlsx
module 8/: DAMO510, Module 08, Dataset1.csv  DAMO510, Module 08, Dataset2.csv  DAMO510, Module 08, Starter.ipynb  DAMO510, Module 08, in-Class Activity, Instructions.docx
(+3 files in other folders)
